[package]
name = "smtpway"
version = "0.1.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "SMTP server library"
license = "MIT"
keywords = [ "async", "rustls" ]
repository = "https://github.com/NathanRoyer/smtpway"
categories = [ ]

[[example]]
name = "logmail"

[dependencies]
futures-rustls = { version = "0.26", default-features = false }
rustls = { version = "0.23", default-features = false, features = [ "aws-lc-rs" ] }
futures-lite = "2.6"
async-net = "2.0"

[dev-dependencies]
async-exec = "0.1"

[features]
